made the map a bit bigger on the event information page and fixed some margin / alignment with the header and share elements

--- a/client/src/components/dashboard/events/event-information/EventInformation.scss
+++ b/client/src/components/dashboard/events/event-information/EventInformation.scss
@@ -125,7 +125,7 @@ $primary: #3f51b4;
 
     .map-wrapper {
       width: 100%;
-      height: 300px;
+      max-height: 300px;
       margin: 0;
     }
 
@@ -248,8 +248,14 @@ h3 {
     top: 0;
   }
 
-  .eventInformation .event-header {
-    flex-direction: column;
-    min-height: 120px;
+  .eventInformation {
+    .event-header {
+      flex-direction: column;
+      min-height: 120px;
+
+      span {
+        margin-top: 10px;
+      }
+    }
   }
 }
